#573 - style updates to fix flash message layout issue

--- a/app_hubstar/app/styles/profile-css.css
+++ b/app_hubstar/app/styles/profile-css.css
@@ -415,7 +415,53 @@ input{
     position: relative;
 }
 
+div#appfeedback{
+    
+    position:fixed;
+    z-index: 100000;
+    text-align: center;
+    top: -80px;
+    width: 100%;
+}
+
+div#appfeedback div.fresh-profile-pic > img:first-child
+{
+   height: 80px;
+   width: 80px;
+   z-index: 1;
+   top: -3px;
+   position: relative; 
+}
+div#appfeedback div.fresh-profile-pic > img:last-child
+{
+   height: 80px;
+   width: 80px;
+   z-index: 2;
+   position: absolute;
+   top: -3px;
+   left: 0;
+}
+div#appfeedback .fresh-message > span.feed-back{float:left;max-width:85%;overflow:hidden;margin-left:10%;text-align:left;}
+
+div#appfeedback .fresh-message > k.icon-remove{
+   position:absolute;
+   top:1px;
+   right:2px;
+   font-size:16px;
+   margin:0;
+   
+}
+div#appfeedback .fresh-message k.icon-ok-sign{
+    position:absolute;
+    top:11.5px;
+    left:2.5%;
+    width:5%;
+}
+
+
+
 .fresh-message{
+    position:relative;
     line-height: 50px;
     font-size: 18px;
     font-weight: normal;
@@ -435,10 +481,12 @@ input{
 
     display: inline-block;
     width: auto;
-    min-width: 500px;
+    min-width: 530px;
     position: relative;
     vertical-align: top;
     margin-left: -20px;
+    
+    overflow:hidden;
 }
 
 .fresh-message > k{
